.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:04:09 **** Incremental Build of configuration Debug for project DP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DP.o" "..\\src\\DP.cpp" 
g++ -o DP.exe "src\\DP.o" 
Info: Nothing to build for DP
14:13:22 **** Incremental Build of configuration Debug for project DP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DP.o" "..\\src\\DP.cpp" 
g++ -o DP.exe "src\\DP.o" 
14:13:41 **** Incremental Build of configuration Debug for project DP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DP.o" "..\\src\\DP.cpp" 
g++ -o DP.exe "src\\DP.o" 
14:13:57 **** Incremental Build of configuration Debug for project DP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DP.o" "..\\src\\DP.cpp" 
g++ -o DP.exe "src\\DP.o" 
14:14:36 **** Incremental Build of configuration Debug for project DP ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DP.o" "..\\src\\DP.cpp" 
g++ -o DP.exe "src\\DP.o" 
11:28:50 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
11:50:42 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
12:01:08 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
12:01:33 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
16:22:25 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
..\src\Advanced.cpp: In function 'int main()':
..\src\Advanced.cpp:226:6: error: redeclaration of 'int N'
  int N = 13;
      ^
..\src\Advanced.cpp:192:6: note: 'int N' previously declared here
  int N = 50000;
      ^
..\src\Advanced.cpp:247:6: error: conflicting declaration 'int t1'
  int t1 = 9, t2 = 12;
      ^
..\src\Advanced.cpp:195:10: note: previous declaration as 'clock_t t1'
  clock_t t1 = clock();
          ^
..\src\Advanced.cpp:247:14: error: conflicting declaration 'int t2'
  int t1 = 9, t2 = 12;
              ^
..\src\Advanced.cpp:202:10: note: previous declaration as 'clock_t t2'
  clock_t t2 = clock();
          ^
16:22:38 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
09:38:20 **** Rebuild of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
16:17:56 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
16:58:04 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
19:59:46 **** Incremental Build of configuration Debug for project Advanced ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Advanced.o" "..\\src\\Advanced.cpp" 
g++ -o Advanced.exe "src\\Advanced.o" 
20:28:21 **** Rebuild of configuration Debug for project AdvancedHW ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\AdvancedHW_answer.o" "..\\src\\AdvancedHW_answer.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\AdvancedHW.o" "..\\src\\AdvancedHW.cpp" 
g++ -o AdvancedHW.exe "src\\AdvancedHW.o" "src\\AdvancedHW_answer.o" 
20:30:55 **** Incremental Build of configuration Debug for project AdvancedHW ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\AdvancedHW.o" "..\\src\\AdvancedHW.cpp" 
g++ -o AdvancedHW.exe "src\\AdvancedHW.o" "src\\AdvancedHW_answer.o" 
10:53:57 **** Rebuild of configuration Debug for project Flow ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\Flow.o" "..\\src\\Flow.cpp" 
g++ -o Flow.exe "src\\Flow.o" 
